fix: Increased contrast for next session highlight
In schedule table, the green used for highlighting next session was a
bit too bright. Darkened it to make it more readable on some screens.

--- a/static/control.scss
+++ b/static/control.scss
@@ -26,7 +26,7 @@ $fa-font-path           : "./fontawesome/webfonts";
   --accent-color: #284cb8;
   --accent-alt-color: #4767c0;
 
-  --accent-pos-color: #008800;
+  --accent-pos-color: #004400;
   --accent-neg-color: #880000;
 
   --ok-fg-color-rgb: 0, 127, 0;
